# amnesty_qa

./: README.md  evaluation.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
