[project]
name = "amnesty-qa"
version = "0.1.0"
description = ""
authors = [
    {name = "heeju-kim2",email = "heeju.kim@furiosa.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py (==2.3.0)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.2)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "antlr4-python3-runtime (==4.9.3)",
    "anyio (==4.9.0)",
    "async-timeout (==5.0.1)",
    "attrs (==25.3.0)",
    "certifi (==2025.4.26)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "datasets (==3.6.0)",
    "dill (==0.3.8)",
    "distro (==1.9.0)",
    "evaluate (==0.4.3)",
    "exceptiongroup (==1.3.0)",
    "filelock (==3.18.0)",
    "frozenlist (==1.6.0)",
    "fsspec (==2025.3.0)",
    "h11 (==0.16.0)",
    "hf-xet (==1.1.2)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.32.2)",
    "hydra-core (==1.3.2)",
    "idna (==3.10)",
    "inflect (==7.5.0)",
    "jiter (==0.10.0)",
    "joblib (==1.5.1)",
    "more-itertools (==10.7.0)",
    "multidict (==6.4.4)",
    "multiprocess (==0.70.16)",
    "nltk (==3.9.1)",
    "numpy (==2.2.6)",
    "omegaconf (==2.3.0)",
    "openai (==1.82.0)",
    "packaging (==25.0)",
    "pandas (==2.2.3)",
    "path (==17.1.0)",
    "propcache (==0.3.1)",
    "pyarrow (==20.0.0)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "rouge-score (==0.1.2)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "tqdm (==4.67.1)",
    "typeguard (==4.4.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)",
    "xxhash (==3.5.0)",
    "yarl (==1.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
